# Platformer

./: README.md
Platformer/: Histoiralacon.docx  ReadMe  ReadMe~  readme.md
Platformer/Sources/: CMakeLists.txt  CMakeLists.txt~  actor.cpp  actor.h  control_buffer.h  controls.cpp  controls.h  display.cpp  display.h  executable  interface.cpp  interface.h  land.cpp  land.h  main.cpp  mvt_routine.cpp  mvt_routine.h  npc.cpp  npc.h  phys_box.cpp  phys_box.h  phys_const.h  phys_point.cpp  phys_point.h  phys_segment.cpp  phys_segment.h  scene.cpp  scene.h  sprite.cpp  sprite.h  vec2.cpp  vec2.h  weapon.cpp  weapon.h
